--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.4.9/aframe/build/aframe-ar.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
-    <a-scene>
-	  <a-box position="0 0 0" 
-	    scale="2 2 2"
-		rotation"0 0 45"
-	    material="color: blue;">
-	  </a-box>
-	 <a-box position="0 8 0"
-	   scale="2 2 2"
-	   rotation"0 0 45"
-	   material="color: red;">
+    <a-scene embedded 
+	     arjs="matrixCodeType: 3x3;"
+	     vr-mode-ui="enabled: false">
+	  <a-marker type="barcode" value="5">  
+	     <a-box position="0 0.5 0" 
+	            material="color: blue;">
 	  </a-box>
 	  <a-camera>
 	  </a-camera>
-	</a-scene>
+    </a-scene>
   </body>
 </html>
